[REFACTORED] Endpoints
